--- a/M3-D3.html
+++ b/M3-D3.html
@@ -105,6 +105,26 @@
           font-size: 3.5rem;
         }
       }
+
+      .main {
+        position: relative;
+      }
+
+      .alert.alert-primary {
+        display: none;
+      }
+
+      .alert.alert-primary.show {
+        display: inline;
+        position: absolute;
+        top: 10vh;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+        text-align: center;
+        z-index: 90000;
+      }
     </style>
   </head>
   <body>
@@ -608,28 +628,54 @@
           </div>
         </div>
       </div>
+
+      <div class="alert alert-primary container" role="alert"></div>
+
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Search..."
+        onchange="displayImgJum(this.value)"
+      />
+      <div class="jumbotron jumbotron-fluid container">
+        <div class="container"></div>
+      </div>
     </main>
 
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              ...
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
-    
+    </div>
 
     <footer class="text-muted">
       <div class="container">
